@@ -88,6 +88,7 @@
     * 0374 FIX: Fixed syntax error in exception handler of LDAP search code...
     * 0375 FIX: LDAP: Now handling user-ids with umlauts...
     * 0393 FIX: LDAP: Enabled paged LDAP search by default now with a page size of 1000...
+    * 0394 FIX: LDAP: Auth expiration plugin now checks users for being disabled (in AD)...
 
     WATO:
     * 0308 Multisite can now set rotation view permissions for NagVis...
